<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SMSAutoResponder</string>
    <string name="start_stop">Start/Stop Responses</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="activity_prompt">Select your Current Activity:</string>
    <string name="response_prompt">Current Response:</string>
    <string name="action_exit">Exit</string>
    <string name="action_settings">Settings</string>
    <string name="action_configuration">Configuration</string>
    <string name="action_preferences">Preferences</string>
    <string name="action_clear_data">Clear Data</string>
    <string name="action_response_list">Responses</string>
    <string name="action_activity_list">Activities</string>
    <string name="response_driving">I\'m driving right now. I\'ll get back to you when I arrive at my destination.</string>
    <string name="response_cycling">I\'m enjoying my bike ride at the moment. I\'ll get back to you later.</string>
    <string name="response_hiking">I\'m out for a stroll. I\'ll talk to you later.</string>
    <string name="response_running">I\'m running and don\'t want to be disturbed. I\'ll catch you later.</string>
    <string name="response_donot_disturb">I\'m busy right now. I\'ll get back to you later.</string>
    <string name="activity_driving">Driving</string>
    <string name="activity_cycling">Cycling</string>
    <string name="activity_running">Running</string>
    <string name="activity_hiking">Walking/Hiking</string>
    <string name="activity_donotdisturb">Do Not Disturb</string>
    <string name="activity_stationary">still</string>
    <string name="activity_unknown">unknown</string>
    <string name="activity_tilting">tilting</string>
    <string name="driving_title">Driving Response</string>
    <string name="biking_title">Cycling Response</string>
    <string name="running_title">Running Response</string>
    <string name="hiking_title">Hiking Response</string>
    <string name="donot_disturb_title">Do Not Disturb Response</string>
    <string name="response_options_title">Response Options</string>
    <string name="sms_options_title">SMS Options</string>
    <string name="display_options_title">Display Options</string>
    <string name="delay_options_title">Delay Options</string>
    <string name="driving_summary">Response sent while driving</string>
    <string name="biking_summary">Response sent while cycling</string>
    <string name="running_summary">Response sent while running</string>
    <string name="hiking_summary">Response sent while hiking</string>
    <string name="donot_disturb_summary">Response sent while set to Do Not Disturb</string>

    <string-array name="activity_array">
        <item>@string/activity_driving</item>
        <item>@string/activity_cycling</item>
        <item>@string/activity_running</item>
        <item>@string/activity_hiking</item>
        <item>@string/activity_donotdisturb</item>
    </string-array>

    <string name="saved_response_driving">drivingresponse</string>
    <string name="saved_response_biking">bikingresponse</string>
    <string name="saved_response_hiking">hikingresponse</string>
    <string name="saved_response_running">runningresponse</string>
    <string name="saved_response_donotdisturb">donotdisturbresponse</string>
    <string name="saved_activity_option">activityoption</string>
    <string name="saved_response_start">responsestart</string>
    <string name="saved_response_count">responsecount</string>
    <string name="saved_repeat_delay">repeat_delay</string>
    <string name="saved_enable_delay">enable_delay</string>
    <string name="saved_enable_known_contacts">enable_known_contacts</string>
    <string name="saved_ignore_short">ignore_short</string>
    <string name="saved_auto_disable_response_delay">auto_disable_response_delay</string>
    <string name="saved_silent_when_driving">silent_when_driving</string>
    <string name="saved_clear_data_on_exit">clear_data_on_exit</string>
    <string name="saved_show_responses_on_main_activity">show_responses_on_main_activity</string>
    <string name="saved_response_options">response_options</string>
    <string name="saved_sms_options">sms_options</string>
    <string name="saved_display_options">display_options</string>
    <string name="saved_delay_options">delay_options</string>
    <string name="saved_tracking_options">tracking_options</string>
    <string name="saved_track_using_location_services">track_using_location_services</string>
    <string name="saved_enable_tts_read_sms">enable_tts_read_sms</string>
    <string name="longclick_toast">A long click will disable responses.</string>
    <string name="short_ignore_toast">Ignoring short number</string>
    <string name="unknown_ignore_toast">Ignoring text from unknown number</string>
    <string name="default_activity">Running</string>
    <string name="reset_defaults">Reset Defaults</string>
    <string name="response_default">Response</string>
    <string name="responses_sent_prompt">Responses Sent:</string>
    <string name="response_toast">Response Sent</string>
    <string name="acknowledge_exit_title">Exit</string>
    <string name="acknowledge_exit_msg">Are you sure you want to exit?</string>
    <string name="acknowledge_delete_responses_title">Clear Responses</string>
    <string name="acknowledge_delete_responses_msg">Are you sure you want to clear all the response data</string>
    <string name="acknowledge_delete_activities_title">Clear Activities</string>
    <string name="acknowledge_delete_activities_msg">Are you sure you want to clear all the activities data</string>
    <string name="dlg_yes">Yes</string>
    <string name="dlg_cancel">Cancel</string>
    <string name="notification_title">SMS Auto Responder</string>
    <string name="notifications_sent">@string/responses_sent_prompt</string>
    <string name="response_sentby"> -- Sent with SMSAutoResponder</string>
    <string name="dialog_auto_disable">Automatic Disable Delay</string>
    <string name="problem_dlg_msg">Something went wrong. Please make sure that you have the Play Store installed and that you are connected to the internet. Contact developer with details if this persists.</string>
    <string name="listview_title">Recent Responses:</string>
    <string name="title_activity_settings">Customize</string>
    <string name="title_activity_panel_settings">Settings</string>
    <string name="response_hint">Enter a Response</string>
    <string name="settings_title">Settings</string>
    <string name="configuration_title">Configuration</string>
    <string name="preference_file_key">com.ridgway.smsautoresponder.PREFERENCE_FILE_KEY</string>
    <string name="duration_picker_title">Disable responses after...</string>
    <string name="auto_disable_response_msg">Timer Ended! Automatically Disabling Responses</string>
    <string name="mins">Mins</string>
    <string name="hrs">Hrs</string>
    <string name="dlg_ok">OK</string>
    <string name="st_time">At</string>
    <string name="list_header_date">Date</string>
    <string name="list_header_number">Number</string>
    <string name="title_activity_activity_recognition_list">Activity Recognition List</string>
    <string name="title_activity_smsresponse_list">SMS Response List</string>
    <string name="activity_listview_title">Recent Recognized Activities</string>
    <string name="list_header_activity">Activity</string>

    <string name="ResponsePanel_Title">Configuration</string>
    <string name="ResponsePanel_Summary">Customize Responses</string>
    <string name="SettingsPanel_Title">Settings</string>
    <string name="SettingsPanel_Summary">SMS Settings</string>
    <string name="DelaysPanel_Title">Delays</string>
    <string name="DelaysPanel_Summary">Message and Auto Disable Delay Settings</string>
    <string name="DisplayPanel_Title">Display</string>
    <string name="DisplayPanel_Summary">Display Settings</string>

    <string name="SilentCheck_Title">Silence Phone</string>
    <string name="SilentCheck_Summary">Silence the phone ringer when in driving mode</string>
    <string name="IgnoreShortCheck_Title">Ignore short numbers</string>
    <string name="IgnoreShortCheck_Summary">Don\'t respond to short numbers, like 25423 (Alice Radio text number)</string>
    <string name="KnownContactsCheck_Title">Only Respond to known contacts</string>
    <string name="KnownContactsCheck_Summary">Only reply to numbers in your contacts list</string>
    <string name="ClearDataCheck_Title">Clear Data on exit</string>
    <string name="ClearDataCheck_Summary">Clear response and activity history on App exit.</string>
    <string name="DisplayResponsesCheck_Title">Display Responses</string>
    <string name="DisplayResponsesCheck_Summary">Display recent responses list on the main screen</string>
    <string name="tracking_options_title">Location Tracking Options</string>
    <string name="LocationServicesCheck_Title">Tracking Options</string>
    <string name="LocationServicesCheck_Summary">Determine current activity using Google Location Services</string>
    <string name="TTSCheck_Title">Read Incoming SMS</string>
    <string name="TTSCheck_Summary">Enable Read Incoming SMS messages using text to speech engine</string>

    <string name="disable_responses_description">The responses will be automatically disabled after the selected duration.</string>
    <string name="disable_responses_never">Never</string>
    <string name="disable_responses_apocalypse">At the apocalypse!</string>
</resources>
