<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent" >
    	
	<PreferenceCategory
	    android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:key="@string/saved_response_options"
        android:title="@string/response_options_title" >

        <EditTextPreference
		    android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:key="@string/saved_response_driving"
            android:summary="@string/driving_summary"
            android:title="@string/driving_title"
            android:defaultValue="@string/response_driving"
            />
        
	    <EditTextPreference
		    android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:key="@string/saved_response_biking"
            android:summary="@string/biking_summary"
            android:title="@string/biking_title"
            android:defaultValue="@string/response_cycling"
        />
        
        <EditTextPreference
		    android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:key="@string/saved_response_hiking"
            android:summary="@string/hiking_summary"
            android:title="@string/hiking_title"
            android:defaultValue="@string/response_hiking"
        />

        <EditTextPreference
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:key="@string/saved_response_running"
            android:summary="@string/running_summary"
            android:title="@string/running_title"
            android:defaultValue="@string/response_running"
            />

        <EditTextPreference
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:key="@string/saved_response_donotdisturb"
            android:summary="@string/donot_disturb_summary"
            android:title="@string/donot_disturb_title"
            android:defaultValue="@string/response_donot_disturb"
        />

    </PreferenceCategory>

	
</PreferenceScreen>
