<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ridgway.smsautoresponder.MainActivity" >

    <item
        android:id="@+id/action_preferences"
        android:orderInCategory="100"
        android:title="@string/action_preferences"
        android:icon="@drawable/ic_action_action_settings"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_response_list"
        android:orderInCategory="100"
        android:title="@string/action_response_list"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_activity_list"
        android:orderInCategory="100"
        android:title="@string/action_activity_list"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:title="@string/action_exit"
        app:showAsAction="never"/>

</menu>
